# cp-train-tracking

./: .gitignore  Dockerfile  LICENSE  README.md  cp_traintracking.py  favorite_stations.json  list_ids.json  pyproject.toml  requirements  requirements.txt  smithery.yaml
cp-tracker-chat/app/: layout.tsx  page.tsx
cp-tracker-chat/app/api/chat/: route.ts
cp-tracker-chat/lib/: mcp-client.ts
cp_traintracking/: Dockerfile  cp_traintracking.py  pyproject.toml  smithery.yaml
cp_traintracking/cache/: trains_campanhã.json  trains_porto-campanhã.json
