[project]
name = "cp-traintracking"
version = "0.1.0"
description = "MCP Server para rastreio dos Comboios Portugal"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Leonardo Pereira & Daniel Silva", email = "leonardo.pereira@ipvc.pt"}
]
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]